--- a/PrimalHealthGroup/appsettings.json
+++ b/PrimalHealthGroup/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "PHGContext": "Server=(localdb)\\mssqllocaldb;Database=PHGContext;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
